style updates - fixed thumbnail cutoff issue, removed sql files

--- a/web/app/themes/monk-theme/src/styl/shop.styl
+++ b/web/app/themes/monk-theme/src/styl/shop.styl
@@ -115,7 +115,7 @@ ul.nav-menu
 
 .container
 	margin 0 auto
-	width 70%
+	width 90%
 	max-width 1200px
 	padding 0 20px
 
@@ -255,7 +255,7 @@ bdi
 	line-height 2em
 
 input
-	height 2em
+	height 4em
 
 input.wc-block-components-quantity-selector__input
 	height 1em
@@ -263,18 +263,6 @@ input.wc-block-components-quantity-selector__input
 
 .wc-block-components-product-sku
 	left 0px
-
-ol.flex-control-thumbs
-	li
-		cursor pointer
-		width 6em
-		height 6em
-		float left
-		border 2px solid white
-	img
-		max-width 100%
-		height auto
-		object-fit contain
 
 .wp-image-81
 	display block
