--- a/web/app/themes/monk-theme/style.css
+++ b/web/app/themes/monk-theme/style.css
@@ -5,7 +5,7 @@
 Theme Name:     Monk-theme
 Description:    Monk Magazine Custom theme.
 Author:         Adam Haley
-Version:        0.2.5
+Version:        0.2.6
 */
 body {
   display: grid;
@@ -201,6 +201,7 @@ a.more-link i:hover {
   grid-row: span 5;
 }
 .container {
+  width: 90%;
   display: grid;
   grid-template-columns: repeat(8, 1fr);
   gap: 1em;
